--- a/styles/style.css
+++ b/styles/style.css
@@ -1,170 +1,187 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&display=swap");
+
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
 }
-html {
-  font-size: 16px;
-}
-body {
-  background-color: #1f2937;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* height: 100vh; */
-}
-
-.li {
-  list-style: none;
-}
-
-.container1 {
-  background-color: #1f2937;
-  color: #f9faf8;
-
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  height: 5rem;
-  padding: 1rem;
-}
-
-.navbar-branch {
-  font-size: 1.2rem;
-}
-
 .nav-list {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-evenly;
-}
-
-.nav-items {
-  margin: 0 0.5rem;
-}
-
-.li {
-  list-style: none;
-}
-.subject {
-  min-width: 20rem;
-  width: 80%;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.btn {
-  background-color: blue;
-  color: #f9faf8;
-  font-weight: 700;
-  display: inline-block;
-  width: 6rem;
-  height: 2rem;
-}
-
-.sub-img {
+  background-color: #1f2937;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  align-content: flex-end;
+  gap: 1rem;
+  padding-right: 10px;
+}
+.header {
+  background-color: #1f2937;
+  color: #fff;
+  padding-left: 20px;
+  padding-top: 20px;
 }
 
-.container2 {
-  background-color: #f9faf8;
-  color: black;
-  display: flex;
-  flex-direction: column;
+body {
+  font-family: "Noto Sans", sans-serif;
+  background-color: #fff;
+  width: auto;
+  font-size: 16px;
+}
+
+/* global css*/
+img {
   width: 100%;
-  /* margin: 5rem; */
-  padding: 5rem;
+  height: auto;
+  border-radius: 10px;
 }
 
-.head {
-  font-size: 36px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
-.box {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+li {
+  list-style: none;
+}
+h1 {
+  font-size: larger;
 }
 
-.container3 {
-  background-color: #e5e7eb;
-  color: black;
+.hero {
+  background-color: #1f2937;
+  color: #fff;
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  /* margin: 5rem; */
-  padding: 5rem;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-}
-
-.quote {
-  font-style: italic;
-  font-size: 36px;
-  font-weight: 50;
-  display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  align-content: center;
-}
-
-.author {
-  width: 5rem;
-  height: 5rem;
-  font-weight: 700;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-content: flex-end;
-}
-
-.container4 {
-  background-color: blue;
-  color: black;
-  display: flex;
-  width: 100%;
-  /* margin: 5rem; */
-  padding: 5rem;
-  display: flex;
-  flex-direction: row;
+  padding-top: 10px;
+  flex-wrap: wrap;
   align-content: space-around;
+  width: 100%;
 }
-.h4 {
-  color: #f9faf8;
-  display: flex;
-  flex-direction: row;
-}
-.p {
+.hero-left {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  padding-right: 5px;
+  flex-wrap: wrap;
+  align-content: space-evenly;
 }
-.btn2 {
-  background-color: blue;
-  color: #f9faf8;
-  width: 6rem;
-  height: 2rem;
+
+p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 500;
+  text-align: center;
+  font-size: 20px;
+}
+a.btn {
+  background-color: #3882f6;
+  width: 75px;
+  padding: 5px;
+  border-radius: 5px;
+}
+.container-two {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  flex-wrap: wrap;
+  align-content: space-around;
+  width: 100%;
+}
+h2. {
+  font-size: 36px;
+  font-weight: bolder;
+}
+.image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: space-evenly;
+  gap: 20px;
+  padding: 20px;
+  min-width: none;
+}
+img.image-container {
+  max-width: 20%;
+}
+.heading {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+p.hero-left-para {
+  text-align: left;
+  font-weight: lighter;
+  font-size: 15px;
+}
 
-.container5 {
+.quote-container {
+  background-color: #a8a9ab;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: flex-end;
+  padding: 50px;
+  justify-content: center;
+  width: 100%;
+}
+
+p.quote {
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+}
+p.author {
+  font-style: italic;
+}
+.action-container {
+  background-color: #3882f6;
+  width: 80%;
+  padding: 20px;
+  margin: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+}
+.left-action-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.call-to-action {
+  color: #fff;
+}
+
+p.action-para {
+  font-size: medium;
+  text-align: left;
+}
+
+.button {
+  border-color: #fff;
+  border-radius: 5px;
+  background-color: transparent;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px 5px;
+  width: 30%;
+}
+
+footer {
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
 }
